<resources>
    <string name="app_name">TBC-Academy-Android-Task-4</string>
    <string name="user_icon">User Icon</string>
    <string name="button_next">Next</string>
    <string name="back_arrow">Back arrow</string>
    <string name="next_arrow">Next arrow</string>
    <string name="hello">Hello!</string>
    <string name="lets_introduce">lets introduce</string>
    <string name="your_full_name">Your full name</string>
    <string name="username">Username</string>
</resources>