<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/swamp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="45dp"
            android:layout_height="48dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="#331CB28F"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp">

            <View
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_green_square" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/hello"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/lets_introduce"
            android:textColor="@color/stone"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp">

                <View
                    android:layout_width="35dp"
                    android:layout_height="45dp"
                    android:background="@drawable/rounded_yellow_rectangle" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/user_icon"
                    android:src="@drawable/ic_user" />
            </FrameLayout>

            <EditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:fontFamily="@font/poppins"
                android:hint="@string/your_full_name"
                android:padding="10dp"
                android:inputType="text"
                android:autofillHints="name"
                android:textColorHint="@color/stone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp">

                <View
                    android:layout_width="35dp"
                    android:layout_height="45dp"
                    android:background="@drawable/rounded_yellow_rectangle" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/user_icon"
                    android:src="@drawable/ic_user" />
            </FrameLayout>

            <EditText
                android:fontFamily="@font/poppins"
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/username"
                android:padding="10dp"
                android:inputType="text"
                android:autofillHints="username"
                android:singleLine="false"
                android:textColorHint="@color/stone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:soundEffectsEnabled="false"
            android:splitMotionEvents="false"
            tools:visibility="visible">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_dark_neon_square"
                    app:backgroundTint="@null" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/back_arrow"
                    android:src="@drawable/ic_back_arrow" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="20">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_green_square"
                    app:backgroundTint="@null" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/button_next"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/next_arrow"
                        android:src="@drawable/ic_next_arrow" />
                </LinearLayout>


            </FrameLayout>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>

